--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "coveragePathIgnorePatterns": ["functions.js"]
   },
   "dependencies": {
-    "puppeteer": "^21.1.1"
+    "puppeteer": "16.2.0"
   },
   "devDependencies": {
     "eslint": "^8.28.0",
